fix (GC-312): avoid overlaped columns on tables (#751)

--- a/app/assets/stylesheets/glownet/_tables.scss
+++ b/app/assets/stylesheets/glownet/_tables.scss
@@ -7,3 +7,7 @@
 .pvtCheckContainer{
     overflow-x: scroll;
 }
+
+.mdl-data-table__cell--non-numeric.mdl-data-table__cell--non-numeric {
+  word-wrap: break-word
+}
